--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/graphql": "^7.10.6",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.5.1",
+    "apollo-server-express": "^2.25.0",
     "express-mongo-sanitize": "^2.1.0",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.5",
+    "graphql-type-json": "^0.3.2",
     "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.12.13",
     "mongoose-autopopulate": "^0.14.0",
