--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/graphql": "^7.10.6",
     "@nestjs/mongoose": "^7.0.2",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "apollo-server-express": "^2.25.0",
     "express-mongo-sanitize": "^2.0.2",
@@ -35,6 +36,7 @@
     "mongodb-memory-server": "^6.9.6",
     "mongoose": "5.10.13",
     "mongoose-autopopulate": "^0.13.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
