--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.5.1",
     "@nestjs/graphql": "^7.10.6",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
