--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "apollo-server-express": "^2.25.0",
+    "bcryptjs": "^2.4.3",
     "express-mongo-sanitize": "^2.0.2",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.5",
