--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "mongodb-memory-server": "^6.9.6",
     "mongoose": "5.10.13",
     "mongoose-autopopulate": "^0.13.0",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
